Refactored and reformated code.